--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
     "prettier/@typescript-eslint"
 	],
 	"rules": {
+		"semi": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
-		"@typescript-eslint/no-explicit-any": "off"
+		"@typescript-eslint/no-explicit-any": "off",
+  	"@typescript-eslint/semi": ["error"]
 	}
 }
